align correction

--- a/portfolio/src/assets/scss/home/home-banner.scss
+++ b/portfolio/src/assets/scss/home/home-banner.scss
@@ -52,8 +52,6 @@
         font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
           sans-serif;
         margin: 0;
-        // max-width: 100vw;
-        // width: max-content;
         text-align-last: right;
         float: right;
         text-align: -webkit-right;
@@ -78,7 +76,7 @@
     left: 20px;
     text-align-last: left;
     float: left;
-    top: 60vh;
+    top: 55vh;
     .wrapper {
       padding: 0px 10px;
       .box-titles {
